# backdropfx

./: BeginHere.md  CMakeLists.txt  ProjectHome.md
CMakeModules/: FindOSGBulletPlus.cmake  FindOSGHelper.cmake  Findpackage.cmake.in  ModuleInstall.cmake  Usepackage.cmake.in  VESBinAndLibDirs.cmake  VESInstallAutoDiscoveryTools.cmake  packageConfig.cmake.in  packageConfigVersion.cmake.in
apps/: CMakeLists.txt
apps/cubemapviewer/: CMakeLists.txt  cubemapviewer.cpp
apps/wxapp/: CMakeLists.txt
apps/wxpick/: CMakeLists.txt
branches/newdepthpeel/: CMakeLists.txt
branches/newrenderfx/: CMakeLists.txt
branches/newrenderfx/CMakeModules/: FindOSGWxTree.cmake
branches/newrenderfx/apps/wxpick/: CMakeLists.txt
branches/newrenderfx/data/: lzhack.osg  protoskydomeapp.fs  test-main.fs  test-main.vs  testoff-lighting.vs
branches/newrenderfx/data/shaders/: DepthPeelDisplay.fs  DepthPeelDisplay.vs  moon.vs  skydome.fs  skydomeDebug.vs
branches/newrenderfx/data/shaders/effects/: alphaBlend.vs  declarations.common  none.fs  none.vs
branches/newrenderfx/data/shaders/gl2/: bdfx-declarations.fs  bdfx-depthpeel.fs  bdfx-transform.vs  ffp-declarations-fog.fs  ffp-declarations.common  ffp-eyecoords-off.vs  ffp-eyecoords-on.vs  ffp-fog-off.vs  ffp-init.vs  glow-finalize.fs  streamline-main.fs
branches/newrenderfx/examples/alloff/: alloff.cpp
branches/newrenderfx/include/backdropFX/: Effect.h  Manager.h  MoonBody.h  ShaderModule.h  Utils.h  Version.h
branches/newrenderfx/include/boost/prof/: profiler.hpp
branches/newrenderfx/protos/: CMakeLists.txt
branches/newrenderfx/protos/depthpart/: DepthPartitionStage.cpp  DepthPartitionStage.h
branches/newrenderfx/protos/hdr/: hdrapp.cpp
branches/newrenderfx/protos/shadercompositor/: CMakeLists.txt
branches/newrenderfx/src/backdropFX/: CMakeLists.txt  DepthPartitionStage.cpp  DepthPeelBin.cpp  LocationData.cpp
branches/newrenderfx/tests/shaderffp/: shaderffp.cpp
branches/newrenderfx/tests/skydome/: CMakeLists.txt
branches/newrenderfx/tests/verticalslice/: DefaultScene.cpp
data/: backdropfx.fpc.in  ephemtest.osg  lzground.osg  protoDepthMapShadow.vs
data/shaders/: DepthPeelDisplay.vs  GlowCameraClear.fs  moon.fs  skydome.fs  skydome.vs  skydomeDebugText.fs  sun.vs
examples/: CMakeLists.txt
examples/alloff/: alloff.cpp
examples/simple/: CMakeLists.txt  simple.cpp
examples/simple-rtt/: simple-rtt.cpp
examples/simplertt/: CMakeLists.txt
include/backdropFX/: BackdropCommon.h  DepthPartition.h  DepthPeelBin.h  Effect.h  EffectLibrary.h  EffectLibraryUtils.h  Export.h  Manager.h  RTTViewport.h  RenderingEffects.h  RenderingEffectsStage.h  ShaderLibraryConstants.h  ShaderModule.h  ShaderModuleUtils.h  ShaderModuleVisitor.h  SkyDome.h  Stub.h  StubStage.h  SurfaceUtils.h  Version.h.in
protos/depthpart/: CMakeLists.txt  DepthPartition.h  depthpartapp.cpp
protos/newdepthpeel/: CMakeLists.txt  newdepthpeel.cpp
protos/noise/: noise.cpp
protos/shadercompositor/: CMakeLists.txt  shadercompositor.cpp
protos/shadows/: CMakeLists.txt
src/backdropFX/: BackdropCommon.cpp  CMakeLists.txt  DepthPartition.cpp  DepthPartitionStage.cpp  DepthPeelBin.cpp  (+18 more)
tests/: CMakeLists.txt
tests/moon/: CMakeLists.txt
tests/multiview/: CMakeLists.txt  multiview.cpp
tests/multiviewrtt/: CMakeLists.txt
tests/osgephem/: CMakeLists.txt  osgephem2.cpp
tests/perftest00/: CMakeLists.txt
tests/profiler/: CMakeLists.txt  profiler.cpp
tests/renderfx/: CMakeLists.txt  renderfx.cpp
tests/shaderffp/: CMakeLists.txt  shaderffp.cpp
tests/skydome/: CMakeLists.txt
tests/surface/: CMakeLists.txt  surface.cpp
tests/verticalslice/: CMakeLists.txt  DefaultScene.cpp  DefaultScene.h  verticalslice.cpp
tests/ves/: CMakeLists.txt  ves.cpp
trunk/: CMakeLists.txt
trunk/CMakeModules/: CMakeMacros.cmake  ModuleInstall.cmake  packageBuildTreeSettings.cmake.in
trunk/apps/: CMakeLists.txt
trunk/apps/cubemapviewer/: CMakeLists.txt
trunk/apps/wxapp/: wxapp.cpp
trunk/apps/wxpick/: EffectHandler.cpp  EffectHandler.h  wxpick.cpp
trunk/data/: multiviewrtt.fs  multiviewrtt.vs  proto-heat.fs  proto-heat.vs  protoCreateDepthMap.fs  protoCreateDepthMap.vs  protoDepthMapShadow.fs  protohdr.fs  simple-rtt.fs  simple-rtt.vs  teston-lighting.vs
trunk/data/shaders/: skydomeDebug.fs
trunk/data/shaders/effects/: blurHorizontal.fs  gaussConvolution1Dy.fs  glowCombine.vs  heat-texture.vs
trunk/data/shaders/gl2/: bdfx-depthpeel-declarations.fs  bdfx-depthpeel-on.fs  bdfx-lighting-utilities.common  bdfx-main-nodepthpeel.fs  bdfx-main.vs  dof-declarations.vs  ffp-declarations.common  ffp-declarations.vs  ffp-finalize.fs  ffp-fog-off.fs  ffp-fog-on.fs  ffp-lighting-light0.vs  ffp-lighting-off.vs  glow-main.fs  glow-transform.vs  noise-declarations.common  noise-noise.vs.fs  perpixel-declarations.fs  perpixel-lighting-on.fs  perpixel-normal-surface.fs  shadowmap-declarations.common  shadowmap-depthtest-off.fs  shadowmap-depthtest-on.fs  shadowmap-main.vs  shadowmap-texcoords-off.vs  surface-surface-dirt.fs  surface-surface-grass.fs
trunk/examples/: CMakeLists.txt
trunk/examples/alloff/: CMakeLists.txt
trunk/examples/simple-rtt/: CMakeLists.txt
trunk/examples/simplertt/: CMakeLists.txt
trunk/include/backdropFX/: BackdropCommon.h  DepthPeelUtils.h  EffectLibrary.h  LightInfo.h  Manager.h  RenderingEffects.h  ShaderModule.h  ShaderModuleVisitor.h  ShadowMap.h  ShadowMapStage.h  SkyDome.h  SkyDomeStage.h  SunBody.h  Utils.h
trunk/protos/: CMakeLists.txt
trunk/protos/depthpart/: DepthPartition.cpp
trunk/protos/hdr/: CMakeLists.txt
trunk/protos/newdepthpeel/: newdepthpeel.cpp
trunk/protos/noise/: CMakeLists.txt
trunk/protos/shadercompositor/: shadercompositor.cpp
trunk/protos/shadows/: shadows.cpp
trunk/src/backdropFX/: BackdropCommon.cpp  EffectLibraryUtils.cpp  ShadowMapStage.cpp  SurfaceUtils.cpp
trunk/tests/moon/: moonapp.cpp
trunk/tests/multiviewrtt/: multiviewrtt.cpp
trunk/tests/osgephem/: osgephem.cpp
trunk/tests/renderfx/: CMakeLists.txt  renderfx.cpp
trunk/tests/skydome/: skydome.cpp
wiki/: BeginHere.wiki
(+154 files in other folders)
