SET( CATEGORY Test )

ADD_SUBDIRECTORY( moon )
ADD_SUBDIRECTORY( multiview )
ADD_SUBDIRECTORY( multiviewrtt )
ADD_SUBDIRECTORY( osgephem )
ADD_SUBDIRECTORY( perftest00 )
ADD_SUBDIRECTORY( profiler )
ADD_SUBDIRECTORY( renderfx )
ADD_SUBDIRECTORY( shaderffp )
ADD_SUBDIRECTORY( skydome )
ADD_SUBDIRECTORY( surface )
ADD_SUBDIRECTORY( verticalslice )
ADD_SUBDIRECTORY( ves )
